--- a/notebooks/vsm_dataset.ipynb
+++ b/notebooks/vsm_dataset.ipynb
@@ -566,92 +566,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'change_points': tensor([[[   0,  389],\n",
-       "          [ 390,  434],\n",
-       "          [ 435,  674],\n",
-       "          [ 675,  824],\n",
-       "          [ 825, 1004],\n",
-       "          [1005, 1049],\n",
-       "          [1050, 1139],\n",
-       "          [1140, 1214],\n",
-       "          [1215, 1285]]]),\n",
-       " 'features': tensor([[[0.1760, 0.1520, 1.3457,  ..., 0.3698, 0.2462, 0.3996],\n",
-       "          [0.1962, 0.1926, 1.0610,  ..., 0.4737, 0.7028, 0.4522],\n",
-       "          [0.1352, 0.2011, 1.1083,  ..., 0.1671, 0.8252, 0.1603],\n",
-       "          ...,\n",
-       "          [0.1959, 0.2655, 0.9039,  ..., 0.5950, 0.3317, 0.1053],\n",
-       "          [0.1544, 0.0566, 0.4594,  ..., 0.3248, 1.3552, 0.0854],\n",
-       "          [0.1940, 0.0252, 0.1848,  ..., 0.1020, 0.1405, 0.0623]]]),\n",
-       " 'features_3D': tensor([[[0.4820, 0.2245, 0.3131,  ..., 0.0890, 0.0475, 0.5097],\n",
-       "          [0.4547, 0.3663, 0.6532,  ..., 0.2040, 0.0342, 0.4670],\n",
-       "          [0.6155, 0.4895, 0.8514,  ..., 0.1906, 0.0383, 0.8322],\n",
-       "          ...,\n",
-       "          [0.0754, 0.2052, 0.0285,  ..., 0.1285, 0.0934, 0.1621],\n",
-       "          [0.0645, 0.2008, 0.0322,  ..., 0.0623, 0.0998, 0.1134],\n",
-       "          [0.0374, 0.0903, 0.0614,  ..., 0.0228, 0.1050, 0.3063]]]),\n",
-       " 'features_flow': tensor([[[1.7741e-02, 0.0000e+00, 1.9424e-01,  ..., 0.0000e+00,\n",
-       "           2.0609e-01, 2.6404e-03],\n",
-       "          [9.1354e-03, 0.0000e+00, 1.7870e-01,  ..., 0.0000e+00,\n",
-       "           2.0452e-01, 6.5836e-04],\n",
-       "          [1.2126e-02, 0.0000e+00, 1.7509e-01,  ..., 0.0000e+00,\n",
-       "           1.3210e-01, 1.0436e-04],\n",
-       "          ...,\n",
-       "          [5.1379e-03, 0.0000e+00, 1.9235e-01,  ..., 0.0000e+00,\n",
-       "           4.4815e-02, 1.7157e-01],\n",
-       "          [1.7109e-02, 0.0000e+00, 1.5787e-01,  ..., 0.0000e+00,\n",
-       "           1.2113e-01, 2.8783e-03],\n",
-       "          [1.2626e-02, 0.0000e+00, 1.3582e-01,  ..., 3.4590e-05,\n",
-       "           1.6188e-01, 3.5437e-02]]]),\n",
-       " 'features_iv3': tensor([[[0.3367, 0.4718, 0.9208,  ..., 0.1338, 0.5554, 0.3948],\n",
-       "          [0.1392, 0.4687, 0.8513,  ..., 0.0802, 0.3220, 0.3055],\n",
-       "          [0.2558, 0.7733, 0.9487,  ..., 0.0909, 0.7049, 0.4529],\n",
-       "          ...,\n",
-       "          [0.2778, 0.1424, 0.6279,  ..., 0.1347, 0.5331, 0.5963],\n",
-       "          [0.6994, 0.4811, 0.4620,  ..., 0.0192, 0.1915, 0.1846],\n",
-       "          [0.1182, 0.1641, 0.3579,  ..., 0.0000, 0.2224, 0.3206]]]),\n",
-       " 'features_rgb': tensor([[[0.1658, 0.0974, 0.2780,  ..., 0.0885, 0.1630, 0.1707],\n",
-       "          [0.1637, 0.1097, 0.3666,  ..., 0.1742, 0.0494, 0.2018],\n",
-       "          [0.1612, 0.0754, 0.3528,  ..., 0.1334, 0.1104, 0.1514],\n",
-       "          ...,\n",
-       "          [0.0474, 0.0195, 0.4413,  ..., 0.4416, 0.1973, 0.5849],\n",
-       "          [0.1664, 0.2045, 0.3064,  ..., 0.0473, 0.0083, 0.1216],\n",
-       "          [0.0252, 0.1119, 0.1991,  ..., 0.0271, 0.2562, 0.3428]]]),\n",
-       " 'features_rn': tensor([[[0.3590, 0.1503, 0.0158,  ..., 1.9890, 0.1472, 0.4253],\n",
-       "          [0.4629, 0.2599, 0.3921,  ..., 1.6874, 0.1090, 0.2770],\n",
-       "          [0.5585, 0.4014, 0.2763,  ..., 1.5503, 0.0429, 0.5016],\n",
-       "          ...,\n",
-       "          [0.5080, 0.2437, 0.0077,  ..., 1.9590, 0.4010, 0.2995],\n",
-       "          [0.2092, 0.7476, 0.1793,  ..., 1.3461, 0.2229, 0.3624],\n",
-       "          [0.6138, 0.5181, 0.5673,  ..., 1.5265, 0.0895, 0.5309]]]),\n",
-       " 'fps': tensor([15.], dtype=torch.float64),\n",
-       " 'n_frame_per_seg': tensor([[390,  45, 240, 150, 180,  45,  90,  75,  71]]),\n",
-       " 'n_frames': tensor([1286]),\n",
-       " 'n_steps': tensor([86]),\n",
-       " 'picks': tensor([[   0,   15,   30,   45,   60,   75,   90,  105,  120,  135,  150,  165,\n",
-       "           180,  195,  210,  225,  240,  255,  270,  285,  300,  315,  330,  345,\n",
-       "           360,  375,  390,  405,  420,  435,  450,  465,  480,  495,  510,  525,\n",
-       "           540,  555,  570,  585,  600,  615,  630,  645,  660,  675,  690,  705,\n",
-       "           720,  735,  750,  765,  780,  795,  810,  825,  840,  855,  870,  885,\n",
-       "           900,  915,  930,  945,  960,  975,  990, 1005, 1020, 1035, 1050, 1065,\n",
-       "          1080, 1095, 1110, 1125, 1140, 1155, 1170, 1185, 1200, 1215, 1230, 1245,\n",
-       "          1260, 1275]]),\n",
-       " 'video_name': [\"b'Cooking'\"],\n",
-       " 'key': ['video_8']}"
+       "(707, 2048)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "video_info"
+    "training_set[0][0][\"features_rn\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 468, 2048])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "video_info['features_rn'].shape"
    ]
   },
   {
