--- a/notebooks/pca_datasets.ipynb
+++ b/notebooks/pca_datasets.ipynb
@@ -119,6 +119,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(350, 1024)"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feat.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.01030507, 0.        , 0.17212544, ..., 0.00933762, 0.14797555,\n",
+       "        0.        ],\n",
+       "       [0.01623172, 0.        , 0.17408632, ..., 0.        , 0.08356722,\n",
+       "        0.01061142],\n",
+       "       [0.00630657, 0.        , 0.16615345, ..., 0.        , 0.03121687,\n",
+       "        0.05343444],\n",
+       "       ...,\n",
+       "       [0.01119477, 0.        , 0.20672494, ..., 0.        , 0.14872962,\n",
+       "        0.00390182],\n",
+       "       [0.01037787, 0.        , 0.15833198, ..., 0.        , 0.16371168,\n",
+       "        0.00138861],\n",
+       "       [0.01265803, 0.        , 0.18552539, ..., 0.        , 0.15395667,\n",
+       "        0.        ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(350, 1024)"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocessing.normalize(feat, norm='l2').shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(350, 1024)"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
    "outputs": [
@@ -139,6 +229,236 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in features:\n",
+    "    if np.sum(i ** 2) <1:\n",
+    "        print(\"si\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "262.1891"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(features[0] ** 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.22323589, 0.121519  , 0.41137224, ..., 0.29724607, 0.35464266,\n",
+       "       0.66032904], dtype=float32)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(69676, 1024)"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.01378659, 0.00750476, 0.0254055 , ..., 0.0183573 , 0.02190199,\n",
+       "        0.04078055],\n",
+       "       [0.01057878, 0.00453828, 0.02616318, ..., 0.0102624 , 0.03332447,\n",
+       "        0.00807204],\n",
+       "       [0.01823394, 0.0132541 , 0.03702414, ..., 0.00984378, 0.02004703,\n",
+       "        0.03640542],\n",
+       "       ...,\n",
+       "       [0.01170601, 0.01111678, 0.04207801, ..., 0.00758443, 0.01619762,\n",
+       "        0.00732499],\n",
+       "       [0.01538386, 0.00353778, 0.04117977, ..., 0.05245328, 0.04133239,\n",
+       "        0.00459293],\n",
+       "       [0.01529368, 0.00393989, 0.04138784, ..., 0.05307002, 0.04188594,\n",
+       "        0.00431658]], dtype=float32)"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xd = preprocessing.normalize(features, norm='l2')\n",
+    "xd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.01378659, 0.00750476, 0.0254055 , ..., 0.0183573 , 0.02190199,\n",
+       "        0.04078055],\n",
+       "       [0.01057878, 0.00453828, 0.02616318, ..., 0.0102624 , 0.03332448,\n",
+       "        0.00807204],\n",
+       "       [0.01823394, 0.01325411, 0.03702415, ..., 0.00984378, 0.02004704,\n",
+       "        0.03640543],\n",
+       "       ...,\n",
+       "       [0.01170602, 0.01111678, 0.04207802, ..., 0.00758443, 0.01619763,\n",
+       "        0.00732499],\n",
+       "       [0.01538386, 0.00353778, 0.04117977, ..., 0.05245327, 0.04133239,\n",
+       "        0.00459293],\n",
+       "       [0.01529368, 0.00393989, 0.04138784, ..., 0.05307002, 0.04188594,\n",
+       "        0.00431658]], dtype=float32)"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocessing.normalize(xd, norm='l2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 1024)"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features[:1].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.01378659, 0.00750476, 0.0254055 , ..., 0.0183573 , 0.02190199,\n",
+       "       0.04078055], dtype=float32)"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocessing.normalize(features[:1], norm='l2')[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def xdd(xd):\n",
+    "    if xd is not None:\n",
+    "        print(\"hola\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1952443596.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_6846/1952443596.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    xdd(\"xd\" if a is not None)\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [
@@ -155,6 +475,26 @@
    ],
    "source": [
     "features_rgb.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "178.24483"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(features_rgb[0] ** 2)"
    ]
   },
   {
@@ -179,6 +519,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "127.78471"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(features_flow[0] ** 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
    "outputs": [
@@ -195,6 +555,26 @@
    ],
    "source": [
     "features_iv3.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "527.78986"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(features_iv3[0] ** 2)"
    ]
   },
   {
@@ -219,6 +599,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "717.1603"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(features_3D[0] ** 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [
@@ -235,6 +635,26 @@
    ],
    "source": [
     "features_rn.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "811.7162"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(features_rn[0] ** 2)"
    ]
   },
   {
@@ -679,6 +1099,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999996414745898"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(features_gn_orig[0] ** 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
@@ -699,6 +1139,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2466.127"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(features_rgb_orig[0] ** 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
@@ -715,6 +1175,26 @@
    ],
    "source": [
     "features_rgb_orig.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "122.50726"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(features_flow_orig[0] ** 2)"
    ]
   },
   {
